Error handling implementation