@@ -4,9 +4,12 @@ import com.vetclinicapp.model.view.PetManipulationViewModel;
 import com.vetclinicapp.repository.PetManipulationRepository;
 import com.vetclinicapp.service.PetManipulationService;
 import org.modelmapper.ModelMapper;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Future;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,15 +23,13 @@ public class PetManipulationServiceImpl implements PetManipulationService {
         this.modelMapper = modelMapper;
     }
 
-
     @Override
     public List<PetManipulationViewModel> getPetManipulations(String name) {
 
         return this.petManipulationRepository.getPetManipulationsByPetNameOrderByManipulationDateDesc(name)
                 .stream()
                 .map(petManipulation -> modelMapper.map(petManipulation, PetManipulationViewModel.class))
-                .collect(Collectors.toList());
-
+                .toList();
 
     }
 }
